--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 
-		<script src="./script.js"></script>
+		<!-- <script src="./script.js"></script> -->
 	</head>
 	<body>
 		<h1>Hello world</h1>
 
-		<script>
-			console.log("Hello world, from the HTML!");
-			let someOtherExample = "woohoo!";
+		<!-- <script>
+			// console.log("Hello world, from the HTML!");
+			// let someOtherExample = "woohoo!";
 
-			var someOtherOtherExample = prompt("What is your name?");
+			// var someOtherOtherExample = prompt("What is your name?");
 
-			exampleVariable = someOtherOtherExample.toUpperCase();
-			alert(exampleVariable);
-		</script>
+			// exampleVariable = someOtherOtherExample.toUpperCase();
+			// alert(exampleVariable);
+		</script> -->
+
+		<script src="controlflow.js"></script>
 	</body>
 </html>
