feature of function content

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 			// alert(exampleVariable);
 		</script> -->
 
-		<script src="controlflow.js"></script>
+		<!-- <script src="controlflow.js"></script> -->
+		<!-- <script src="loops.js"></script> -->
+		<script src="script.js"></script>
 	</body>
 </html>
